Overflow fix 2

--- a/css/Events.css
+++ b/css/Events.css
@@ -143,9 +143,14 @@
         outline: 2px solid #abc5c7;
         filter: drop-shadow(0px 7px 8.5px #000 rgba(0, 0, 0, 0.54));
     }
+    .hamburger-menu:has(input:checked) + .sidebar {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
     .sidebar {
         display: flex;
-        translate: 100vw;
+        visibility: hidden;
         background-color: #abc5c7;
         padding-top: 10%;
         padding: 2%;
@@ -450,17 +455,23 @@
         outline: 2px solid #abc5c7;
         filter: drop-shadow(0px 7px 8.5px #000 rgba(0, 0, 0, 0.54));
     }
+    .hamburger-menu:has(input:checked) + .sidebar {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
     .sidebar {
         display: flex;
-        translate: 100vw;
+        visibility: hidden;
         background-color: #abc5c7;
-        padding: 1%;
-        padding-right: 110px  !important;
-        padding: 25px;
+        padding-top: 10%;
+        padding: 2%;
+        padding-right: 200px;
         text-align: center;
         position: absolute;
         gap: 15px;
-        right: 35px;
+        top: 30px;
+        right: 25px;
         border-radius: 15px;
         outline: 2px solid #023028; 
         outline-offset: 0px;       
@@ -765,21 +776,29 @@
         outline: 2px solid #abc5c7;
         filter: drop-shadow(0px 7px 8.5px #000 rgba(0, 0, 0, 0.54));
     }
+    .hamburger-menu:has(input:checked) + .sidebar {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
     .sidebar {
         display: flex;
-        translate: 150vw;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s linear 0.2s, opacity 0.2s ease-in-out;
         background-color: #abc5c7;
-        padding-top: 10%;
-        padding: 2%;
         justify-content: center;
         text-align: center;
         position: absolute;
         gap: 15px;
         top: 162px;
-        width: 1000px;
+        max-width: 100%;
+        width: 100%;
         outline: 2px solid #023028; 
-        outline-offset: 0px;       
+        outline-offset: 0px;   
+        height: auto;   
         z-index: 10;
+        
     }
     .nav-menu {
         gap: 20px;
@@ -1087,20 +1106,26 @@
         outline: 2px solid #abc5c7;
         filter: drop-shadow(0px 7px 8.5px #000 rgba(0, 0, 0, 0.54));
     }
+    .hamburger-menu:has(input:checked) + .sidebar {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
     .sidebar {
         display: flex;
-        translate: 150vw;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s linear 0.2s, opacity 0.2s ease-in-out;
         background-color: #abc5c7;
-        padding: 2%;
         justify-content: center;
         text-align: center;
         position: absolute;
         gap: 15px;
         top: 162px;
-        width: 1000px;
+        max-width: 100%;
+        width: 100%;
         outline: 2px solid #023028; 
         outline-offset: 0px;   
-        max-width: 100%;
         height: auto;   
         z-index: 10;
         
